# scomm

./: AUTHORS  Makefile.am  aclocal.m4  configure  configure.in  scomm.kdevprj  scomm.lsm  scomm.spec
scomm/: Makefile.am  Makefile.in  cclientsocket.cpp  cclientsocket.h  cserversocket.cpp  cserversocket.h  logfile.cpp  logfile.h  main.cpp  main.h  parse.cpp  parse.h  scomm.conf  tty.cpp  tty.h
scomm/docs/: Makefile.in
scomm/docs/en/: Makefile.in  index-1.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index.html
src/: Client.cpp  Client.h  Makefile.am  Makefile.in  Parser.cpp  Parser.h  main.cpp  main.h  moduls.cpp  moduls.h  protocol.cpp  protocol.h
