####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = scomm
scomm_SOURCES = parse.cpp cserversocket.cpp cclientsocket.cpp logfile.cpp tty.cpp main.cpp 
scomm_LDADD   = -lpopt

SUBDIRS = docs 

EXTRA_DIST = main.cpp tty.cpp tty.h logfile.cpp logfile.h main.h cclientsocket.cpp cclientsocket.h cserversocket.cpp cserversocket.h parse.cpp parse.h scomm.conf 

####### kdevelop will overwrite this part!!! (end)############
bin_PROGRAMS = scomm

# set the include path found by configure
INCLUDES= $(all_includes)
 
# the library search path.
scomm_LDFLAGS = $(all_libraries) 
                                                                                
